# ark-recognizer

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  circle_detect.py  circle_detection.py  digit_ocr.py  item.py  recognizer.py  recognizer_digit_ocr.py  recognizer_feature_matching.py  recognizer_feature_matching_example.py  recognizer_item.py  recognizer_template_matching.py  setup.py  template_matching.py  test.py  utils.py
examples/: recognizer_digit_ocr_example.py  recognizer_feature_matching_example.py
fonts/: NotoSansSC-Regular_DigitHash.json
items/: README.md  update_items.md
items/data/: item_icon_table.json  items.json
src/ark_recognizer_cpp/: item.cpp  item.h  main.cpp  recognize_icon.cpp  recognize_icon.h  recognize_number.cpp  recognize_number.h  recognize_type.cpp  recognize_type.h  recognizer.cpp  recognizer.h  recognizer_type.cpp  recognizer_type.h  recognizer_wasm.cpp  utils.cpp  utils.h
src/ark_recognizer_py/: circle_detection.py  digit_ocr.py  item.py  recognize_icon.py  recognize_number.py  recognize_type.py  recognizer.py  template_matching.py  utils.py
test_data/scene_data/: 1350x1080.json  1440x1080.json  1620x1080.json  1728x1080.json  1920x1080.json  2160x1080.json  2520x1080.json
tests/: scene_images.py
tests/ark-recognizer-cpp/: scene_images.py
